# songswap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pull-request-workflow.yaml
songswap/: __init__.py  songswap.py
tests/: test_download.py  test_wavfile.py
