[project]
name = "songswap"
version = "0.1.0"
description = "Python package to swap out the audio on a YouTube video with another song."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["music", "video"]
authors = [
  {name = "Jonathan Davies"}
]
maintainers = [
  {name = "Jonathan Davies", email = "maintainer@example.com" } # Optional
]
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

dependencies = [ # Optional
  "pytube @ git+https://github.com/oncename/pytube",
  "librosa",
  "ffmpy",
  "moviepy @ git+https://github.com/Zulko/moviepy"
]

[project.urls]  # Optional
"Homepage" = "https://github.com/itsjondavies/songswap"
"Bug Reports" = "https://github.com/itsjondavies/songswap/issues"
"Source" = "https://github.com/itsjondavies/songswap"

[tool.ruff]
select = ["E", "F", "B", "Q", "W", "I", "N"]
line-length = 90
ignore-init-module-imports = true

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages=["songswap"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"